# c2bd_rs

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
c2bd/: Cargo.toml
c2bd/src/: lib.rs
src/: main.rs
webserver/: Cargo.toml
webserver/src/: business_days.rs  lib.rs
webserver/templates/: index.html
